@@ -2,6 +2,9 @@ package com.yg.webshow.crawl.webpage;
 
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.LinkedHashMap;
+import java.util.Map;
 import java.util.StringTokenizer;
 
 import org.jsoup.nodes.Node;
@@ -48,7 +51,27 @@ public class WebDocUtil {
 		
 		return token;
 	}
-		
+	
+	public Map<String, String> parseQuery(String query) {
+		LinkedHashMap<String, String> resMap = new LinkedHashMap<String, String>();
+				
+		StringTokenizer stkz = new StringTokenizer(query, "&");
+		String kvp = null;
+		while(stkz.hasMoreTokens()) {
+			kvp = stkz.nextToken();
+			String[] tokens = kvp.split("=");
+			
+			if(tokens.length == 2) {
+				//TODO
+			} else {
+				//TODO
+			}
+		}
+			
+		return resMap;
+	}
+	
+	
 	public static void main(String ... v) {
 		System.out.println("Activate an ejection mode !!");
 				
@@ -60,10 +83,13 @@ public class WebDocUtil {
 		System.out.println("------------------------");
 		
 		try {
-			URI uri = new URI("http://news.naver.com/main/read.nhn?oid=018&sid1=101&aid=0003435915&mid=shm&cid=428288&mode=LSD&nh=20151227114901");
-			uri = new URI("http://news.chosun.com/site/data/html_dir/2015/12/27/2015122700214.html");
-			System.out.println(uri.normalize().getQuery());;
-		} catch (URISyntaxException e) {
+			URL uri = new URL("http://news.naver.com/main/read.nhn?oid=018&sid1=101&aid=0003435915&mid=shm&cid=428288&mode=LSD&nh=20151227114901");
+//			uri = new URI("http://news.chosun.com/site/data/html_dir/2015/12/27/2015122700214.html");
+			System.out.println(uri.getQuery());;
+			System.out.println(uri.getPath());
+			System.out.println(uri.getHost());
+			System.out.println(uri.getProtocol());
+		} catch (Exception e) {
 			e.printStackTrace();
 		}
 		
